# statistical-learning

classification/data/: dummy_data_classification.csv  qda_classification.csv
classification/src/: Main.java
classification/src/data/: Dataset.java
classification/src/metrics/: Accuracy.java  Metric.java
classification/src/models/: ClassificationModel.java
classification/src/models/discriminative/: LogisticRegressionClassifier.java
classification/src/models/generative/: GaussianNaiveBayes.java  GenerativeClassifier.java  LDAClassifier.java  QDAClassifier.java
classification/src/models/generative/nonparametric/: NonParametricGenerativeClassifier.java  (+1 more)
classification/src/utils/: ArrayUtils.java
exercises/: .gitignore  linear-regression.ipynb  pyproject.toml
glms/: Cargo.toml
glms/data/: dummy_data.csv  path.csv  uk_drivers_death.csv
glms/src/: main.rs  optimizer.rs  poisson_glm.rs
knn-classification/: .gitignore  CMakeLists.txt
knn-classification/data/: dummy_data_classification.csv  dummy_data_regression.csv
knn-classification/include/: ArrayUtils.hpp  CsvReader.hpp  Dataset.hpp  Knn.hpp  KnnClassifier.hpp  KnnRegressor.hpp
knn-classification/src/: main.cpp
knn-classification/src/dataset/: ClassificationDataset.cpp  RegressionDataset.cpp
knn-classification/src/knn/: Knn.cpp  KnnClassifier.cpp  KnnRegressor.cpp
knn-classification/src/utils/: ArrayUtils.cpp  CsvReader.cpp  Dataset.cpp
linear-regression/: Cargo.toml  data.csv
linear-regression/src/: dataset.rs  main.rs
linear-regression/src/algorithm/: linreg.rs  mod.rs
(+4 files in other folders)
